segmented ssh packets always throw an exception.
This issue was migrated from bug 3178 in our old bug tracker.
Original bug information:
Reporter: didier gautheron
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: Other
Version: Git
Attachments:
ssh_desegmentation.diff: ssh: test for desegmentation before testing for exception.
ssh_test_not_segmented.pcap: not segmented ssh capture
ssh_test_segmented.pcap: last ssh packet cut in two.