From didier gautheron (bug 3178):

move need_desegmentation test before exception handling


svn path=/trunk/; revision=27170