epan/dissectors/packet-ssh.c
@@ -376,9 +376,9 @@ dissect_ssh(tvbuff_t *tvb, packet_info *pinfo, proto_tree *tree)
 			}
 		}
 
+		if(need_desegmentation) return;
                 if(offset <= last_offset)
                         THROW(ReportedBoundsError);
-		if(need_desegmentation) return;
 	}
 }
 
